--- a/index.html
+++ b/index.html
@@ -1,10 +1,386 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Racers IITJ</title>
-  </head>
-  <body>
-    <h2>Hello World!</h2>
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+  <title>IIT Jodhpur Racers</title>
+
+  <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+
+
+
+<!-- js -->
+  <script src="http://leemark.github.io/better-simple-slideshow/demo/js/hammer.min.js"></script><!-- for swipe support on touch interfaces -->
+</head>
+
+
+
+
+
+
+
+
+<body>
+
+<!-- header starts -->
+
+
+
+<header class="large">
+
+
+      <a href="aboutus.html"><img class="logo" src="racers1.png"></a>
+      <ul>
+
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a  href="SAE.html">SAE</a></li>
+        <li><a href="Cars.html">Cars</a></li>
+        <li><a href="Team.html">Team</a></li>
+        <li><a href="Sponsors.html">Sponsors</a></li>
+        <li><a href="Contacts.html">Contact Us</a></li>
+      </ul>
+
+
+</header>
+
+
+<!-- scrollfire starts starts -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- slidshow starts starts -->
+
+ <div class="parallax-container"  style="height:650px">
+
+<div id="slideshow">
+
+
+   <div>
+     <img src="6.jpg" width ="100%">
+   </div>
+    <div>
+     <img src="5.jpg" width ="100%">
+   </div>
+    <div>
+     <img src="4.jpg" width ="100%">
+   </div>
+   <div>
+     <img src="2.jpg" width ="100%">
+   </div>
+
+    </div>
+</div>
+
+<!--
+
+  <div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <h1 class="header center white-text"><font size="8" color="white" face="Copperplate Gothic"><b></b></font></h1>
+        <div class="row center">
+          <h5 class="header col s12 light"><font size="5" color="white" face="Copperplate Gothic"><b></b></font></h5>
+        </div>
+
+      </div>
+    </div>
+    <div class="parallax" ><img src="6.jpg" alt="Unsplashed background img 1"  width="100%"></div>
+  </div>
+-->
+<!-- About us starts starts -->
+
+
+<div class="container">
+    <div class="section">
+
+      <div class="row">
+        <div class="col s12 left">
+          <h5><font face="Arial"><b>About Us </b></font></h5>
+          <font face="arial" size="4" color="#1565c0">RACERS IITJ</font>
+
+          <p class="left-align light"><font face="Arial" size="3">Racers IITJ is the official BAJA SAE team of the Indian Institute of Technology, Jodhpur. We are a student-run competition team given the challenge of designing, building, promoting and racing a single seat prototype offroad vehicle. It is our job to interpret the challenge given the constraints in any way we choose and implement our ideas to finally bring out an all-terrain vehicle. But basically we are a bunch of automobile enthusiasts comprising of undergraduate engineering students from all four years following our passion, constantly burning in the crucible of competition. </font><br><br></p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+ <!--team and about us starts starts -->
+  <div class="parallax-container " style="height:350px" >
+    <div class="section no-pad-bot">
+      <div class="container">
+
+
+        <div class="row center">
+           <h4><font face="Arial"><b><br><!--<img src="line.png" width="200px" height="2px">&nbsp&nbsp Find Out More About Us &nbsp&nbsp<img src="line.png" width="200px" height="2px">--></b></font></h4>
+        </div>
+
+ <div class="row left">
+
+          <center><a href="Contacts.html" id="download-button" class="btn-large waves-effect waves-light  blue accent-3">Contact Us</a></center>
+        <p><font face="Arial" size="5"><center><br><br><br><br><br><br><br><br>Contact us to know more</center></font></p>
+        </div>
+
+
+ <div class="row right">
+          <center><a href="Team.html" id="download-button" class="btn-large waves-effect waves-light  blue accent-3">The Team</a></center>
+          <p><font face="Arial" size="5"><center><br><br><br><br><br><br><br><br>Meet the IITJ Racers crew</center></font></p>
+        </div>
+
+
+      </div>
+    </div>
+    <div class="parallax"><img src="11.jpg" alt="Unsplashed background img 2"  width="100%"></div>
+  </div>
+
+
+
+<!-- news feed starts starts
+  <div class="parallax-container">
+    <div class="section">
+<div class="row center">
+           <h4><font face="Arial" color="Black"><b><br><img src="line.png" width="200px" height="2px">&nbsp&nbsp News Feed &nbsp&nbsp<img src="line.png" width="200px" height="2px"></b></font></h4>
+        </div>
+      Icon Section
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <div class="card" style="height:400px">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="9.jpg" style="height:250px ">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><font face="Arial" size="5">Vaayu 2.0</font><i class="material-icons right">more_vert</i></span>
+      <p><a href="#">This is a link<br></a>
+
+
+
+      </p>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    </div>
+  </div>
+
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <div class="card" style="height:400px">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="7.jpg" style="height:250px ">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><font face="Arial" size="5">BAJA SAE</font><i class="material-icons right">more_vert</i></span>
+      <p><a href="#">This is a link</a></p>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    </div>
+  </div>
+
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <div class="card" style="height:400px">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="6.jpg" style="height:250px ">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><font face="Arial" size="5">The Instigators</font><i class="material-icons right">more_vert</i></span>
+      <p><a href="#">This is a link</a></p>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    </div>
+  </div>
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div> -->
+
+
+
+
+<!-- video starts starts
+  <div class="parallax-container valign-wrapper" style="height:500px">
+    <div class="section no-pad-bot">
+      <div class="container">
+
+        <div class="row center">
+          <video width="800" controls >
+  <source src="Literature Club.mp4" type="video/mp4">
+
+  Your browser does not support HTML5 video.
+</video>
+
+
+
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="11.jpg" alt="Unsplashed background img 3" width="100%"></div>
+  </div> -->
+
+<!-- material starts starts -->
+<div class="container">
+    <div class="section">
+
+      <div class="row">
+        <div class="col s12 left">
+               <h5><font face="Arial" color="Black"><b><br>How we Work </b></font></h5>
+                <font face="arial" size="4" color="#1565c0">TEAM STRUCTURE</font>
+
+
+          <p class="left-align light"><font face="Arial" size="3">Our team is divided in such a way that all members get hands-on experience to apply their classroom knowledge into practice. Students also get a chance to hone their soft skills through fund raising, material sourcing and team management. But most of all, we learn to work efficiently as a team and complete the task at hand. <b>We have divided ourselves into the following sub-teams:</b></font><br><br></p>
+          </div>
+        <div class="row">
+          <div class="col s2">
+          <img src="logo\1.png" style="height:85px">
+          <img src="logo\2.png" style="height:85px">
+          <img src="logo\3.png" style="height:65px">
+          <img src="logo\4.png" style="height:75px">
+          <img src="logo\5.png" style="height:85px">
+
+          </div>
+          <div class="col s10">
+          <font face="Arial" size="4"><br>
+<b>Transmission-</b> Designs a light and compact powertrain assembly which satisfies performance requirements of the vehicle <br><br>
+<b>Suspension-</b> Responsible for maintaining vehicle stability and ride comfort<br><br>
+<b>Steering-</b> Designs entire steering assembly to provide minimum turning radius <br><br>
+<b>Design & FEA-</b> Fabricates a lightweight and strong chassis from the design constraints that can support all subsystems<br><br>
+<b>Manufacturing & Quality-</b> Overlooks entire manufacturing phase along with special manufacturing requirements and performs regular checks on overall quality<br><br>
+<b>Marketing & Media-</b> Reaches out to potential sponsors and handles overall media reach of the team and its sponsors<br><br>
+
+</font>
+          </div>
+        </div>
+
+
+        </div>
+      </div>
+
+    </div>
+
+
+<!--
+<div class="section">
+<div class="row">
+  <div class="col s2 left">
+  <div class="card">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="logo\1.png">
+    </div>
+    <div class="card-content">
+      <span class="right-align card-title activator grey-text text-darken-4 "> &nbsp Marketing & Media</span>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Marketing & Media<i class="material-icons right">close</i></span>
+      <p>Overlooks entire manufacturing phase along with special manufacturing requirements and performs regular checks on overall quality</p>
+    </div>
+  </div>
+ </div>
+
+
+
+</div>
+</div>
+-->
+
+
+
+
+<!-- footers starts starts -->
+ <footer class="page-footer grey lighten-4">
+
+
+
+
+      <div class="row">
+
+        <div class="col s12 center-align">
+        <img src="racers2.png" style="width:300px">
+            <br>
+
+          <a href="https://www.facebook.com/racers.iitj/?ref=br_rs" class="icon"><img src="facebook.png" style="height:30px"></a>&nbsp&nbsp
+          <a href="#" class="icon"><img src="youtube.png" style="height:30px"></a>&nbsp&nbsp
+          <a href="https://www.linkedin.com/in/team-racers- iitj/" class="icon"><img src="in.png" style="height:30px"></a>&nbsp&nbsp
+          <a href="https://www.instagram.com/racers_iitj/?hl=en" class="icon"><img src="insta.png" style="height:30px"></a>
+
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+    <div class="footer-copyright  grey darken-4">
+      <div class="container">
+     <center> Copyright 2017 <a class="brown-text text-lighten-3" href="http://iitj.ac.in/">Indian Institute of Technology Jodhpur</a></center>
+      </div>
+    </div>
+  </footer>
+
+
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
+
+<script>
+$("#slideshow > div:gt(0)").hide();
+
+setInterval(function() {
+  $('#slideshow > div:first')
+    .fadeOut(1000)
+    .next()
+    .fadeIn(1000)
+    .end()
+    .appendTo('#slideshow');
+},  3000);
+
+</script>
+
+
+
+<script>
+$(document).on("scroll", function() {
+
+  if($(document).scrollTop()>400) {
+    $("header").removeClass("large").addClass("small");
+  } else {
+    $("header").removeClass("small").addClass("large");
+  }
+
+});
+
+</script>
+
   </body>
 </html>
