--- a/SAE.html
+++ b/SAE.html
@@ -1,10 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
   <title>SAE | IITJ Racers</title>
 
+  <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -88,9 +89,9 @@
 
 
           <h5><font face="Arial"><b>Baja SAE</b></font></h5>
-          <font face="arial" size="4" color="#1565c0">PASSION TO PODIUM</font>
+          <font face="arial" size="4" color="#1565c0">GROUND TO GLORY</font>
 
-          <p class="left-align light"><font face="Arial" size="3">SAE BAJA is a national undergraduate engineering event run by the Society of automobile Engineers India. It is organised in two parts. First is the virtual round in which teams present their plans. While in second round teams are required to bring vehicles fabricated by them on to the track.
+          <p class="left-align light"><font face="Arial" size="3">SAE BAJA is a national undergraduate engineering event run by the Society of Automobile Engineers India. It is organised in two parts. First is the virtual round in which teams present their plans. While in second round teams are required to bring vehicles fabricated by them on to the track.
 The event SAE BAJA invites a participation of over 400 colleges with a footfall of around 6000 students on site with faculty advisors and various companies like <b>Mahindra, Altair, John Deere, Larsen Toubro, Volvo, Chevrolet, ARAI, Bosch, Ansys, ACMA and SIAM </b> to name a few.
 The team prepares throughout the year for the event in the month of February where they are judged on the basis of their design, fabrication with a series of rigorous tests. They are also required to present their planning and promoting strategies to the judges for evaluation.</font></p>
 
@@ -147,7 +148,7 @@ The team prepares throughout the year for the event in the month of February whe
 
 
 
-          <h5><font face="Arial"><b>Efficycle SAE </b></font></h5>
+          <h5><font face="Arial"><b>Effi-Cycle SAE </b></font></h5>
           <font face="arial" size="4" color="#1565c0">NEVER BACK DOWN</font>
 
 
