--- a/Team.html
+++ b/Team.html
@@ -108,7 +108,7 @@
       <img src="pic/1.1.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Dr. Kaushal Desai </b><br><font color="#1565c0" size="3">&nbspAssistant Professor</font><br><font size="3">0291-2449702</font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Dr. Kaushal A. Desai </b><br><font color="#1565c0" size="3">&nbspAssistant Professor</font><br><font size="3">0291-2449702</font></font></center></p>
 
         </div>
 
@@ -150,7 +150,7 @@
       <img src="pic/1.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Kartik Mohan </b><br><font color="#1565c0" size="3">&nbspCaptain</font><br><font size="3">+91-7222809166</font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Karthik Mohan </b><br><font color="#1565c0" size="3">&nbspCaptain</font><br><font size="3">+91-7222809166</font></font></center></p>
 
         </div>
 
