--- a/vaayu 2.0.html
+++ b/vaayu 2.0.html
@@ -107,7 +107,7 @@ Car No. 47 was the first buggy in the history of Racers IITJ to participate in t
 <button class="accordion"><font face="Arial" size="4">Achievements</font></button>
 <div class="panel">
   <p>
-They say that hard work and perseverance always bear fruit. Our first achievement with Car no. 47 was when the  virtual round results were released and we cleared it with flying colours, achieving an All-India rank of 13 for the presentation section and an overall rank of 54 among the 400 colleges that participated in this round. Further down the road, we were ranked first among all the IIT's that participated in the final BAJA event and were also the top college in Rajasthan, with an All-India rank of 63. Also, we were one of the few vehicles to complete the three-hour long gruesome Endurance race without a single breakdown, a herculean feat for a team participating for its first time
+They say that hard work and perseverance always bear fruit. Our first achievement with Car no. 47 was when the  virtual round results were released and we cleared it with flying colours, achieving an <b>All-India rank of 13</b> for the presentation section and an overall rank of 54 among the 400 colleges that participated in this round. Further down the road, we were ranked first among all the IIT's that participated in the final BAJA event and were also the top college in Rajasthan, with an <b>All-India rank of 63</b>. Also, we were one of the few vehicles to complete the three-hour long gruesome Endurance race without a single breakdown, a herculean feat for a team participating for its first time
 </p>
 </div>
 
@@ -116,6 +116,7 @@ They say that hard work and perseverance always bear fruit. Our first achievemen
   <p><b>Faculty advisors – </b>Dr. Kaushal Desai<br>
 <b>Captain – </b>Ayush Raina<br>
 <b>Vice Captain – </b>Manish Jadhav<br>
+<b>Treasurer - </b> Akhil Mehta<br>
 <b>Rollcage Design Sub-System - </b>Hardik Jain (Head) - Pradyuman Meena, Harsh Vardhan Shrivastava, Rohit Singh, Manoj Malviya, Shubham Shinde
 <br>
 <b>Suspension Sub-System - </b> Mohit Agarwal (Head) - Dheeraj Sisodiya, Vedant Bhuyar, Pruthvi Boghara, Udit Singh Parihar<br>
