--- a/Cars.html
+++ b/Cars.html
@@ -117,7 +117,7 @@
         <div class="col s4">
           <div class="card">
             <div class="card-image">
-              <img src="6.jpg">
+              <img src="old_6.jpg">
             </div>
 
             <div class="card-action">
@@ -132,7 +132,7 @@
 
        <div class="row">
         <div class="col s12 left">
-          <h5><font face="Arial"><b>Efficycle SAE</b></font></h5>
+          <h5><font face="Arial"><b>Effi-Cycle SAE</b></font></h5>
         </div>
       </div>
 
@@ -145,7 +145,7 @@
             </div>
 
             <div class="card-action">
-              <a href="#"><font face="arial" size="4" color="#1565c0">Effycycle</font></a>
+              <a href="#"><font face="arial" size="4" color="#1565c0">Effi-Cycle</font></a>
             </div>
           </div>
         </div>
