--- a/Contacts.html
+++ b/Contacts.html
@@ -95,7 +95,7 @@
 
           <p class="left-align light"><font face="arial" size="3">
             <b>Address<br></b>
-            Indian Institute of Technology Jodhpur <br>Old Residency Road<br> Ratanada <br>Jodhpur 342011<br><br>
+            Indian Institute of Technology Jodhpur <br>Nagaur Road, NH 65<br> Karwad, Jodhpur <br>Rajashthan 342037<br><br>
 
 
 
@@ -119,15 +119,13 @@
 
          <div class="row">
         <div class="col s12 left">
-            <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:500px;width:100%;"><div id="gmap_canvas" style="height:380px;width:100%;"><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.themecircle.net" id="get-map-data"></a></div></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:16,center:new google.maps.LatLng(26.2739443,73.0274253),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(26.2739443, 73.0274253)});infowindow = new google.maps.InfoWindow({content:"<b>Indian Institute of Technology</b><br/>Ratanada<br/> 342011 jodhpur" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+            <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:500px;width:100%;"><div id="gmap_canvas" style="height:380px;width:100%;"><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.themecircle.net" id="get-map-data"></a></div></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:16,center:new google.maps.LatLng(26.2739443,73.0274253),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(26.476529, 73.122339)});infowindow = new google.maps.InfoWindow({content:"<b>Indian Institute of Technology</b><br/>Nagaur Road, NH 65, Karwad<br/> 342037 jodhpur" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
 
 
 
         </div>
 
       </div>
-
-
 
     </div>
   </div>
@@ -151,7 +149,7 @@
             <br>
 
          <a href="https://www.facebook.com/racers.iitj/?ref=br_rs" class="icon"><img src="facebook.png" style="height:30px"></a>&nbsp&nbsp
-          <a href="#" class="icon"><img src="youtube.png" style="height:30px"></a>&nbsp&nbsp
+          <a href="https://www.youtube.com/channel/UCulCu53TQXedeAyJxQqSdtA" class="icon"><img src="youtube.png" style="height:30px"></a>&nbsp&nbsp
           <a href="https://www.linkedin.com/in/team-racers- iitj/" class="icon"><img src="in.png" style="height:30px"></a>&nbsp&nbsp
           <a href="https://www.instagram.com/racers_iitj/?hl=en" class="icon"><img src="insta.png" style="height:30px"></a>
 
