--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
    <div>
-     <img src="6.jpg" width ="100%">
+     <img src="old_6.jpg" width ="100%">
    </div>
     <div>
      <img src="5.jpg" width ="100%">
