--- a/vajra.html
+++ b/vajra.html
@@ -83,7 +83,7 @@
 
       <div class="row">
         <div class="col s12 center">
-<img class="circular" src="vaayu.png">
+<img class="circular " src="Vajra.jpg">
 
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h5><font face="Arial"><b><br>Vajra</b></font></h5>
@@ -107,7 +107,7 @@ The inspiration and confident gained from Car No. 47 paved the way for a bunch o
 <button class="accordion"><font face="Arial" size="4">Achievements</font></button>
 <div class="panel">
   <p>
- Hard work and dedication lead Team RacersIITJ achieve all India Rank of 12 in the engineering design. Successfully completed the brake test and technical evaluation in the first attempt. We were one among the top 30 teams in acceleration test and completed the three-hour long Endurance race successfully. Further down the road, we landed at an All-India rank of 93 scoring top position in Rajasthan.
+ Hard work and dedication lead Team RacersIITJ achieve <b>All India Rank of 12</b> in the engineering design. Successfully completed the brake test and technical evaluation in the first attempt. We were one among the top 30 teams in acceleration test and completed the three-hour long Endurance race successfully. Further down the road, we landed at an All-India rank of 93 scoring top position in Rajasthan.
 </p>
 </div>
 
