--- a/Cars.html
+++ b/Cars.html
@@ -104,7 +104,7 @@
         <div class="col s4">
           <div class="card">
             <div class="card-image">
-              <img src="Vaayu 2.0.jpg">
+              <img src="VAAYU 2.0.jpg">
             </div>
 
             <div class="card-action">
