--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
    <div>
      <img src="2.jpg" width ="100%">
    </div>
+   <div>
+     <img src="virtual.jpg" width ="100%">
+   </div>
 
     </div>
 </div>
@@ -102,7 +105,20 @@
 -->
 <!-- About us starts starts -->
 
+<br>
+<div class="container">
+    <div class="section">
 
+      <div class="row">
+        <div class="col s12 left">
+          <h5><font face="Arial" size="6" color="#1565c0" ><center><b>** Achieved Rank 25 in Virtual BAJA SAEINDIA 2018 **</b></center></font></h5>
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+</br>
 <div class="container">
     <div class="section">
 
