--- a/Sponsors.html
+++ b/Sponsors.html
@@ -105,7 +105,7 @@ By collaborating with us you get an opportunity to get publicized at on-ground a
 <b>Kindly have a look at our marketing brochure and events timeline to get details of how you can contribute and be an integral part of our team.</b></font><br><br></p>
 
 <div style="border:2px ">
-<object data="brochure aug26.pdf" type="application/pdf" width="100%" height="500px">
+<object data="Brochure_Racers IITJ.pdf" type="application/pdf" width="100%" height="500px">
   <p>Alternative text - include a link <a href="Brochure_Racers IITJ.pdf">to the PDF!</a></p>
 </object>
 </div>
