--- a/Contacts.html
+++ b/Contacts.html
@@ -99,7 +99,7 @@
 
 
 
-            <b>Marketing Head :</b> Divyanshu Goyal<br> <b>Phone </b> 8955797898<br><b>Email Id :</b> racers@iitj.ac.in<br><b>Website :</b> http://www.racers.iitj.ac.in
+            <b>Marketing Head :</b> Divyanshu Goyal<br> <b>Phone </b> 8955797898<br><b>Email Id :</b> racers@iitj.ac.in<br><b>Website :</b> http://www.racersiitj.in
           </font></p>
 
         </div>
