--- a/Team.html
+++ b/Team.html
@@ -402,7 +402,7 @@
       <img src="pic/14.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp  Ankit Magal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp  Ankit Mangal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
