--- a/Team.html
+++ b/Team.html
@@ -351,7 +351,7 @@
       <img src="pic/12.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>Shubham Das </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>Subham Das </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
