--- a/index.html
+++ b/index.html
@@ -275,21 +275,23 @@
           </div>
         <div class="row">
           <div class="col s2">
+          <img src="logo\4.png" style="height:75px">
           <img src="logo\1.png" style="height:85px">
           <img src="logo\2.png" style="height:85px">
+          <img src="logo\6.png" style="height:65px">
           <img src="logo\3.png" style="height:65px">
-          <img src="logo\4.png" style="height:75px">
           <img src="logo\5.png" style="height:85px">
 
           </div>
           <div class="col s10">
           <font face="Arial" size="4"><br>
-<b>Transmission-</b> Designs a light and compact powertrain assembly which satisfies performance requirements of the vehicle <br><br>
+<b>Design & FEA-</b> Design a light, compact and sturdy chassis supporting all subsystems<br><br>
+<b>Transmission-</b> Design a robust powertrain assembly which satisfies performance requirements of the vehicle <br><br>
 <b>Suspension-</b> Responsible for maintaining vehicle stability and ride comfort<br><br>
-<b>Steering-</b> Designs entire steering assembly to provide minimum turning radius <br><br>
-<b>Design & FEA-</b> Fabricates a lightweight and strong chassis from the design constraints that can support all subsystems<br><br>
-<b>Manufacturing & Quality-</b> Overlooks entire manufacturing phase along with special manufacturing requirements and performs regular checks on overall quality<br><br>
-<b>Marketing & Media-</b> Reaches out to potential sponsors and handles overall media reach of the team and its sponsors<br><br>
+<b>Steering-</b> Implement a responsive steering system to provide minimum turning radius <br><br>
+<b>Braking-</b> Assemble a reliable braking system for driver safety <br><br>
+<b>Manufacturing & Quality-</b> Overlook entire manufacturing phase along with advanced manufacturing techniques and performs regular checks on overall built quality<br><br>
+<b>Marketing & Media-</b> Reach out to potential sponsors and handles overall media impact of the team and its sponsors<br><br>
 
 </font>
           </div>
