--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           <div class="col s2">
           <img src="logo\4.png" style="height:85px">
           <img src="logo\1.png" style="height:65px">
-        <br><img src="logo\2.png" style="height:95px">
+          <img src="logo\2.png" style="height:95px"><br>
           <br><img src="logo\6.png" style="height:75px">
           <img src="logo\3.png" style="height:65px">
           <img src="logo\5.png" style="height:85px">
