--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <div class="row">
           <div class="col s2">
           <img src="logo\4.png" style="height:75px">
-          <img src="logo\1.png" style="height:75px" "width:200px">
+          <img src="logo\1.png" style="height:85px">
           <img src="logo\2.png" style="height:75px">
           <img src="logo\6.png" style="height:85px">
           <img src="logo\3.png" style="height:65px">
