--- a/Contacts.html
+++ b/Contacts.html
@@ -150,7 +150,7 @@
 
          <a href="https://www.facebook.com/racers.iitj/?ref=br_rs" class="icon"><img src="facebook.png" style="height:30px"></a>&nbsp&nbsp
           <a href="https://www.youtube.com/channel/UCulCu53TQXedeAyJxQqSdtA" class="icon"><img src="youtube.png" style="height:30px"></a>&nbsp&nbsp
-          <a href="https://www.linkedin.com/in/team-racers- iitj/" class="icon"><img src="in.png" style="height:30px"></a>&nbsp&nbsp
+          <a href="https://www.linkedin.com/in/team-racers-iitj/" class="icon"><img src="in.png" style="height:30px"></a>&nbsp&nbsp
           <a href="https://www.instagram.com/racers_iitj/?hl=en" class="icon"><img src="insta.png" style="height:30px"></a>
 
         </div>
