--- a/Team.html
+++ b/Team.html
@@ -213,10 +213,10 @@
          <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/4.jpg" height="50%">
+      <img src="pic/23.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Aniket Janrao </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Divyanshu Goyal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -580,11 +580,11 @@
   <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/23.jpg" height="50%">
+      <img src="pic/4.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Divyanshu Goyal
- </b><br><font color="#1565c0" size="3">&nbsp Head</font><br><font size="3">+91-8955797898</font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Aniket Janrao
+ </b><br><font color="#1565c0" size="3">&nbsp Head</font><br><font size="3">+91-9167151532</font></font></center></p>
 
         </div>
    </div>
