--- a/SAE.html
+++ b/SAE.html
@@ -104,7 +104,7 @@ The team prepares throughout the year for the event in the month of February whe
         <div class="col s4 left">
   <div class="card">
     <div class="card-image "  >
-      <img src="SAE_1.jpg" height="50%">
+      <img src="old_SAE_1.jpg" height="50%">
     </div>
     <div class="card-content">
       <span class="card-title  grey-text text-darken-4" >&nbsp <b>Endurance Run</b></span>
