--- a/Contacts.html
+++ b/Contacts.html
@@ -99,7 +99,7 @@
 
 
 
-            <b>Marketing Head :</b> Aniket Janrao<br> <b>Phone :</b> 9167151532<br><b>Email Id :</b> racers@iitj.ac.in<br><b>Website :</b> http://www.racersiitj.in
+            <b>Marketing Head :</b> Mayank Tak<br> <b>Phone :</b> 8130807788<br><b>Email Id :</b> racers@iitj.ac.in<br><b>Website :</b> http://www.racersiitj.in
           </font></p>
 
         </div>
