--- a/Team.html
+++ b/Team.html
@@ -150,7 +150,7 @@
       <img src="pic/1.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Karthik Mohan </b><br><font color="#1565c0" size="3">&nbspCaptain</font><br><font size="3">+91-7222809166</font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Aditi Tiwari </b><br><font color="#1565c0" size="3">&nbspCaptain</font><br><font size="3">+91-9131454136</font></font></center></p>
 
         </div>
 
@@ -164,7 +164,7 @@
       <img src="pic/2.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Sanket Nakka </b><br><font color="#1565c0" size="3">&nbspVice-Captain(Integration)</font><br><font size="3">+91-8875868380</font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Ankit Mangal </b><br><font color="#1565c0" size="3">&nbspVice-Captain</font><br><font size="3">+91-9131515092</font></font></center></p>
 
         </div>
       </div>
@@ -185,7 +185,7 @@
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">MANUFACTURING, MATERIAL PROCUREMENT & FINANCE</font>
+     <font face="arial" size="4" color="#1565c0"> PROCUREMENT</font>
         </div>
       </div>
    <div class="row center">
@@ -198,7 +198,7 @@
       <img src="pic/3.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Krishna Goyal </b><br><font color="#1565c0" size="3">&nbsp Vice-Captain</font><br><font size="3">+91-9462019447</font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Ajay Kumar </b><br><font color="#1565c0" size="3">&nbsp Vice-Captain</font><br><font size="3">+91-8395035486</font></font></center></p>
 
         </div>
    </div>
@@ -305,7 +305,7 @@
       <img src="pic/8.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Somesh Sharma
+  <p><center><font face="Arial" size="4"><b>&nbsp Abhijeet Suthar
  </b><br><font color="#1565c0" size="3">&nbsp Head</font><br><font size="3"></font></font></center></p>
 
         </div>
@@ -383,7 +383,7 @@
       <img src="pic/13.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Ritwik Kulkarni
+  <p><center><font face="Arial" size="4"><b>&nbsp Pawan Kishore
  </b><br><font color="#1565c0" size="3">&nbsp Head</font><br><font size="3"></font></font></center></p>
 
         </div>
@@ -462,7 +462,7 @@
       <img src="pic/17.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Sharan Saarsar
+  <p><center><font face="Arial" size="4"><b>&nbsp Rohan Shisode
  </b><br><font color="#1565c0" size="3">&nbsp Head</font><br><font size="3"></font></font></center></p>
 
         </div>
@@ -510,7 +510,17 @@
      <font face="arial" size="4" color="#1565c0">ROLL CAGE</font>
         </div>
       </div>
+  <div class="col s3">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="pic/17.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>&nbsp Pooja Chouhan
+ </b><br><font color="#1565c0" size="3">&nbsp Head</font><br><font size="3"></font></font></center></p>
 
+        </div>
+   </div>
 
 
    <div class="row center">
@@ -583,7 +593,7 @@
       <img src="pic/4.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Aniket Janrao
+  <p><center><font face="Arial" size="4"><b>&nbsp Mayank Tak
  </b><br><font color="#1565c0" size="3">&nbsp Head</font><br><font size="3">+91-9167151532</font></font></center></p>
 
         </div>
@@ -662,7 +672,7 @@
       <img src="pic/27.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Aarush Gupta  </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Aman Kumar  </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
    </div>
