--- a/Team.html
+++ b/Team.html
@@ -510,6 +510,9 @@
      <font face="arial" size="4" color="#1565c0">ROLL CAGE</font>
         </div>
       </div>
+   <div clas="row center">
+     <div class="col s5">
+       </div>
   <div class="col s3">
   <div class="card">
     <div class="card-image "  >
