--- a/Team.html
+++ b/Team.html
@@ -305,7 +305,7 @@
       <img src="pic/8.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Abhijeet Suthar
+  <p><center><font face="Arial" size="4"><b>&nbsp Abhijeet Sutar
  </b><br><font color="#1565c0" size="3">&nbsp Head</font><br><font size="3"></font></font></center></p>
 
         </div>
@@ -504,7 +504,7 @@
 
 
 
-<div class="row">
+<!--div class="row">
         <div class="col s12 left">
 
      <font face="arial" size="4" color="#1565c0">ROLL CAGE</font>
@@ -569,7 +569,7 @@
 
         </div>
 
-      </div>
+      </div-->
 
 
 
