--- a/Team.html
+++ b/Team.html
@@ -89,7 +89,7 @@
       <div class="row">
         <div class="col s12 left">
           <h5><font face="Arial"><b>Team</b></font></h5>
-     <font face="arial" size="4" color="#1565c0">FACULTY MEMBERS</font>
+     <font face="arial" size="4" color="#1565c0" align="center">FACULTY MEMBERS</font>
         </div>
       </div>
 
