--- a/Team.html
+++ b/Team.html
@@ -514,7 +514,7 @@
       <img src="pic/3.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Pooja Chouhan </b><br><font color="#1565c0" size="3">&nbsp Vice-Captain</font><br><font size="3">+91-8003825125</font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Pooja Chouhan </b><br><font color="#1565c0" size="3">&nbsp Vice-Captain</font></font></center></p>
 
         </div>
    </div>
